--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
     body {
       background-color: #fff;
       font-family: 'Segoe UI', sans-serif;
+      overflow-x: hidden;
+      width: 100%;
     }
 
 /*hello quote intro css*/
@@ -599,9 +601,10 @@
       z-index: 2;
       border: 1px 2px solid black;
       background-color: #fcfcfd;
-      box-shadow: 2px 2px #fcfcfd;
+      box-shadow: 2px 2px 2px 2px rgb(46, 45, 45);
       width: 99%;
       height: 99%;
+      margin: 20px;
       border-radius: 15px;
       padding: 20px;
       display: flex;
@@ -651,32 +654,7 @@
       color: black;
       font-weight: bolder;
     }
-    .input-buttons {
-      text-align: center;
-    }
 
-    .input-buttons input {
-      padding: 10px 20px;
-      margin: 5px;
-      border: none;
-      border-radius: 10px;
-      font-size: 16px;
-      color: white;
-      cursor: pointer;
-    }
-
-    .input-buttons input[type="submit"] {
-      background-color: rgb(0, 255, 0);
-    }
-
-    .input-buttons input[type="reset"] {
-      background-color: red;
-    }
-
-    .input-buttons input:hover {
-      font-weight: bold;
-      box-shadow: 0 0 10px white;
-    }
 
     @media (max-width: 768px) {
       .king-contact-container {
@@ -699,11 +677,15 @@
 
 
 /*dfdf*/
-
+a{
+  text-decoration-line: none;
+  color: black;
+}
 .copyright-king{
     background-color: black;
     text-align: center;
     height: max-content;
+    margin-top: 30px;
     padding-top: 12px;
     padding-bottom: 15px;
 }
@@ -727,7 +709,7 @@
     padding: 5px;
 }
 #contact-copy:hover{
-    color: blue;
-    border: 1px solid blue;
+    font-weight: bolder;
+    text-shadow: 2px 2px 2px 2px solid white;
     font-weight: bolder;
 }
